fixed aligning on new game link

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -250,6 +250,7 @@ a.button {
 	width: 120px;
 	padding: 0 10px;
 	text-decoration: none;
+	text-align: center;
 }
 
 button:hover, a.button:hover {
